--- a/src/layouts/index.css
+++ b/src/layouts/index.css
@@ -1,10 +1,58 @@
-body{
-  font-family: 'Space Mono', monospace;
-}
 h1,h2,h3,h4,h5,h6,p{
   color: #232537;
 }
 a{
   color:#FDCB25;
   text-decoration: none;
+
  }
+ @font-face {
+  font-family: 'fontello';
+  src: url('../media/icons/fontello.eot?9117304');
+  src: url('../media/icons/fontello.eot?9117304#iefix') format('embedded-opentype'),
+       url('../media/icons/fontello.woff2?9117304') format('woff2'),
+       url('../media/icons/fontello.woff?9117304') format('woff'),
+       url('../media/icons/fontello.ttf?9117304') format('truetype'),
+       url('../media/icons/fontello.svg?9117304#fontello') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+ [class^="icon-"]:before, [class*=" icon-"]:before {
+  font-family: "fontello";
+  font-style: normal;
+  font-weight: normal;
+  speak: none;
+ 
+  display: inline-block;
+  text-decoration: inherit;
+  width: 1em;
+  margin-right: .2em;
+  text-align: center;
+  /* opacity: .8; */
+ 
+  /* For safety - reset parent styles, that can break glyph codes*/
+  font-variant: normal;
+  text-transform: none;
+ 
+  /* fix buttons height, for twitter bootstrap */
+  line-height: 1em;
+ 
+  /* Animation center compensation - margins should be symmetric */
+  /* remove if not needed */
+  margin-left: .2em;
+ 
+  /* you can be more comfortable with increased icons size */
+  /* font-size: 120%; */
+ 
+  /* Font smoothing. That was taken from TWBS */
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+ 
+  /* Uncomment for 3D effect */
+  /* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */
+}
+ 
+.icon-clock:before { content: '\e800'; } /* '' */
+.icon-menu:before { content: '\e801'; } /* '' */
+.icon-twitter:before { content: '\f099'; } /* '' */
+.icon-github:before { content: '\f113'; } /* '' */
